--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
     "babel-jest": "^23.6.0",
     "jest": "^23.6.0",
     "vue-jest": "^3.0.2"
+  },
+  "config": {
+    "nuxt": {
+      "host": "127.0.0.1",
+      "port": 3003
+    }
   }
 }
