--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0",
-    "koa": "^2.6.2",
+    "@nuxtjs/pwa": "^2.6.0",
     "ant-design-vue": "^1.1.10",
-    "@nuxtjs/pwa": "^2.6.0"
+    "axios": "^0.18.0",
+    "cross-env": "^5.2.0",
+    "koa": "^2.6.2",
+    "koa-router": "^7.4.0",
+    "nuxt": "^2.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
