--- a/package.json
+++ b/package.json
@@ -15,10 +15,18 @@
     "@nuxtjs/pwa": "^2.6.0",
     "ant-design-vue": "^1.1.10",
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.4",
     "cross-env": "^5.2.0",
+    "fs": "^0.0.1-security",
     "koa": "^2.6.2",
+    "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
-    "nuxt": "^2.4.0"
+    "koa-session": "^5.10.1",
+    "koa-validate": "^1.0.7",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.4.13",
+    "nuxt": "^2.4.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
