--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.4",
     "cross-env": "^5.2.0",
+    "ejs": "^2.6.1",
     "fs": "^0.0.1-security",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
@@ -27,7 +28,8 @@
     "mongoose": "^5.4.13",
     "nuxt": "^2.4.0",
     "path": "^0.12.7",
-    "qs": "^6.6.0"
+    "qs": "^6.6.0",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
@@ -40,7 +42,7 @@
   "config": {
     "nuxt": {
       "host": "127.0.0.1",
-      "port": 3003
+      "port": 3000
     }
   }
 }
