--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "nuxt": "^2.4.0",
     "path": "^0.12.7",
     "qs": "^6.6.0",
-    "sha1": "^1.1.1"
+    "ramda": "^0.26.1",
+    "sha1": "^1.1.1",
+    "string-random": "^0.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
