--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "path": "^0.12.7",
     "qs": "^6.6.0",
     "ramda": "^0.26.1",
+    "request-promise": "^4.2.4",
     "sha1": "^1.1.1",
     "string-random": "^0.1.3"
   },
