--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "ramda": "^0.26.1",
     "request-promise": "^4.2.4",
     "sha1": "^1.1.1",
-    "string-random": "^0.1.3"
+    "string-random": "^0.1.3",
+    "vue-quill-editor": "^3.0.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
