--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "nuxt": "^2.4.0",
     "path": "^0.12.7",
     "qs": "^6.6.0",
+    "querystring": "^0.2.0",
     "ramda": "^0.26.1",
     "request-promise": "^4.2.4",
     "sha1": "^1.1.1",
     "string-random": "^0.1.3",
+    "url": "^0.11.0",
     "vue-quill-editor": "^3.0.6"
   },
   "devDependencies": {
