--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sha1": "^1.1.1",
     "string-random": "^0.1.3",
     "url": "^0.11.0",
+    "vconsole": "^3.3.0",
     "vue-quill-editor": "^3.0.6"
   },
   "devDependencies": {
