--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^2.6.0",
+    "@sentry/browser": "^4.6.3",
+    "@sentry/node": "^4.6.3",
     "ant-design-vue": "^1.1.10",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.4",
